modules/gdscript/tests/scripts/parser/errors/uid_duplicate.gd
@uid("uid://c4ckv3ryprcn4")
@uid("uid://c4ckv3ryprcn4")

func test():
    pass
